@@ -2,3 +2,16 @@
 Transcript cr cr.
 Example new get.
 
+nil isNil.
+
+true notNil.
+
+1 == 2.
+
+1 ~= 2.
+
+Object class.
+
+1 hash.
+
+Array new; hash.
